file(GLOB files_test init_test.f90)
include_directories(${CMAKE_SOURCE_DIR}/src)

add_executable(init_test ${files_test})
target_link_libraries(init_test PRIVATE decomp2d)
if (BUILD_TARGET MATCHES "gpu")
  set(example_dir "${PROJECT_BINARY_DIR}/examples/init_test")
  message(STATUS "Example dir ${example_dir}")
  install(FILES bind.sh DESTINATION ${example_dir})
  file(COPY bind.sh DESTINATION ${example_dir})
  #file(CHMOD bind.sh DESTINATION ${example_dir} [FILE_PERMISSIONS OWNER_EXECUTE])
  add_test(NAME init_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:init_test>)
else ()
  add_test(NAME init_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:init_test>)
endif()
