file(GLOB files_adios_test io_test.f90)
file(GLOB files_adios_read io_read.f90)
file(GLOB files_adios_tmp_test io_tmp_test.f90)
file(GLOB files_adios_var_test io_var_test.f90)
file(GLOB files_adios_plane_test io_plane_test.f90)
file(GLOB files_adios_bench io_bench.f90)
file(GLOB files_adios_visu io_visu.f90)

include_directories(${CMAKE_SOURCE_DIR}/src)

add_executable(io_adios_test ${files_adios_test})
add_executable(io_adios_tmp_test ${files_adios_tmp_test})
add_executable(io_adios_read ${files_adios_read})
add_executable(io_adios_var_test ${files_adios_var_test})
add_executable(io_adios_plane_test ${files_adios_plane_test})
add_executable(io_adios_bench ${files_adios_bench})
add_executable(io_adios_visu ${files_adios_visu})

target_link_libraries(io_adios_test PRIVATE decomp2d examples_utils)
target_link_libraries(io_adios_tmp_test PRIVATE decomp2d examples_utils)
target_link_libraries(io_adios_read PRIVATE decomp2d examples_utils)
target_link_libraries(io_adios_var_test PRIVATE decomp2d examples_utils)
target_link_libraries(io_adios_plane_test PRIVATE decomp2d examples_utils)
target_link_libraries(io_adios_bench PRIVATE decomp2d examples_utils)
target_link_libraries(io_adios_visu PRIVATE decomp2d examples_utils)

# Run the test(s)
# Note visu is not a test - it is an example to show/create visu files
set(run_dir "${test_dir}/io_adios_test")
file (COPY "${CMAKE_SOURCE_DIR}/examples/io_adios/adios2_config.xml" DESTINATION ${run_dir})
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME io_adios_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_adios_test> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
  add_test(NAME io_adios_read COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_adios_read> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
else ()
  add_test(NAME io_adios_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_adios_test> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
  add_test(NAME io_adios_read COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_adios_read> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
endif ()
# Run the test(s)
set(run_dir "${test_dir}/io_adios_tmp_test")
file (COPY "${CMAKE_SOURCE_DIR}/examples/io_adios/adios2_config.xml" DESTINATION ${run_dir})
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME io_adios_tmp_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_adios_tmp_test> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
else ()
  add_test(NAME io_adios_tmp_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_adios_tmp_test> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
endif ()
# Run the test(s)
set(run_dir "${test_dir}/io_adios_var_test")
file (COPY "${CMAKE_SOURCE_DIR}/examples/io_adios/adios2_config.xml" DESTINATION ${run_dir})
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME io_adios_var_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_adios_var_test> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
else ()
  add_test(NAME io_adios_var_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_adios_var_test> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
endif ()
# Run the test(s)
set(run_dir "${test_dir}/io_adios_plane_test")
file (COPY "${CMAKE_SOURCE_DIR}/examples/io_adios/adios2_config.xml" DESTINATION ${run_dir})
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME io_adios_plane_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_adios_plane_test> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
else ()
  add_test(NAME io_adios_plane_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_adios_plane_test> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
endif ()
# Run the test(s)
set(run_dir "${test_dir}/io_adios_bench")
file (COPY "${CMAKE_SOURCE_DIR}/examples/io_adios/adios2_config.xml" DESTINATION ${run_dir})
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME io_adios_bench COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_adios_bench> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
else ()
  add_test(NAME io_adios_bench COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_adios_bench> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
endif ()
# Run the test(s)
set(run_dir "${test_dir}/io_adios_visu")
file (COPY "${CMAKE_SOURCE_DIR}/examples/io_adios/adios2_config.xml" DESTINATION ${run_dir})
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME io_adios_visu COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_adios_visu> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
else ()
  add_test(NAME io_adios_visu COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_adios_visu> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
endif ()
