file(GLOB files_test io_test.f90)
file(GLOB files_read io_read.f90)
file(GLOB files_var_test io_var_test.f90)
file(GLOB files_plane_test io_plane_test.f90)
file(GLOB files_bench io_bench.f90)

include_directories(${CMAKE_SOURCE_DIR}/src)

add_executable(io_test ${files_test})
add_executable(io_read ${files_read})
add_executable(io_var_test ${files_var_test})
add_executable(io_plane_test ${files_plane_test})
add_executable(io_bench ${files_bench})

target_link_libraries(io_test PRIVATE decomp2d)
target_link_libraries(io_read PRIVATE decomp2d)
target_link_libraries(io_var_test PRIVATE decomp2d)
target_link_libraries(io_plane_test PRIVATE decomp2d)
target_link_libraries(io_bench PRIVATE decomp2d)

# Run the test(s)
set(run_dir "${test_dir}/io_test")
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME io_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_test> WORKING_DIRECTORY ${run_dir})
  add_test(NAME io_read COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_read> WORKING_DIRECTORY ${run_dir})
else ()
  add_test(NAME io_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_test> WORKING_DIRECTORY ${run_dir})
  add_test(NAME io_read COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_read> WORKING_DIRECTORY ${run_dir})
endif ()
# Run the test(s)
set(run_dir "${test_dir}/io_var_test")
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME io_var_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_var_test> ${PROW} ${PCOL} WORKING_DIRECTORY ${run_dir})
else ()
  add_test(NAME io_var_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_var_test> ${PROW} ${PCOL} WORKING_DIRECTORY ${run_dir})
endif ()
# Run the test(s)
set(run_dir "${test_dir}/io_plane_test")
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME io_plane_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_plane_test> WORKING_DIRECTORY ${run_dir})
else ()
  add_test(NAME io_plane_test COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_plane_test> WORKING_DIRECTORY ${run_dir})
endif ()
# Run the test(s)
set(run_dir "${test_dir}/io_bench")
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME io_bench COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:io_bench> WORKING_DIRECTORY ${run_dir})
else ()
  add_test(NAME io_bench COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:io_bench> WORKING_DIRECTORY ${run_dir})
endif ()
